--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 --- 
 layout: default 
-title: Alain's Tech Blog 
+title: Mine Reclamation and Closure
 description: Sharing about Application Development, Integration, Cloud, Big Data and Digital Transformation 
 comments: true 
 ---
