--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@ layout: default
 title: Mine Reclamation and Closure
 description: Sharing about Application Development, Integration, Cloud, Big Data and Digital Transformation 
 comments: true 
+noimage: true
 ---
 
 <!-- Pagination links -->
