--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 --- 
 layout: default 
 title: Mine Reclamation and Closure
-description: Sharing about Application Development, Integration, Cloud, Big Data and Digital Transformation 
+description: Sharing about mine reclamation and closure, mine reclamation and closure plans, and mine reclamation and closure cost estimation.
 comments: true 
 noimage: true
 ---
