--- a/blog.html
+++ b/blog.html
@@ -4,6 +4,7 @@ title: Mine Reclamation and Closure
 description: Sharing about mine reclamation and closure, mine reclamation and closure plans, and mine reclamation and closure cost estimation.
 comments: true 
 noimage: true
+permalink: /blog/
 ---
 
 <!-- Pagination links -->
