--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 title: Mine Reclamation and Closure
 description: Sharing about mine reclamation and closure, mine reclamation and closure plans, and mine reclamation and closure cost estimation.
 comments: false 
-noimage: true
+noimage: false
 ---
 
 <!-- Pagination links -->
