--- a/5w1h.html
+++ b/5w1h.html
@@ -1,1 +1,10 @@
+--- 
+layout: default 
+title: Mine Reclamation and Closure
+description: Sharing about mine reclamation and closure, mine reclamation and closure plans, and mine reclamation and closure cost estimation.
+comments: true 
+noimage: false
+permalink: /5w1h
+---
 
+Welcome to Mine Reclamation and Closure!	  
