--- a/blog.html
+++ b/blog.html
@@ -2,7 +2,7 @@
 layout: default 
 title: Mine Reclamation and Closure
 description: Sharing about mine reclamation and closure, mine reclamation and closure plans, and mine reclamation and closure cost estimation.
-comments: true 
+comments: false 
 noimage: false
 permalink: /blog/
 ---
