--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,8 @@ Contact us here.
   <button type="submit">Send</button>
 </form>
 
-
+<p>Alternatively, you may book a meeting.
+</p>
 
 <!-- Cal inline embed code begins -->
 <div style="width:100%;height:100%;overflow:scroll" id="my-cal-inline"></div>
