--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@ noimage: false
 permalink: /contact/
 ---
 
-Contact us here.
+Contact us here.<br>
 
 <!-- modify this form HTML and place wherever you want your form -->
 <form
@@ -21,7 +21,7 @@ Contact us here.
 	<p></p>
   <label>
     Your message:
-    <textarea name="message"></textarea>
+   <textarea name="message" style="width: 100%;"></textarea>
   </label>
 	<p></p>
   <!-- your other form fields go here -->
