--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@ Contact us here.<br>
   <button type="submit">Send</button>
 </form>
 
-<p>Alternatively, you may book a meeting.
+<p><BR></BR>Alternatively, you may book a meeting.<BR></BR>
 </p>
 
 <!-- Cal inline embed code begins -->
