--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@ noimage: false
 permalink: /contact/
 ---
 
-Contact us here.<br>
+Contact us below:<br><br>
 
 <!-- modify this form HTML and place wherever you want your form -->
 <form
