--- a/resources.html
+++ b/resources.html
@@ -1,6 +1,6 @@
 --- 
 layout: default 
-title: Mine Reclamation and Closure
+title: Mine Reclamation and Closure Resources
 description: Sharing about mine reclamation and closure, mine reclamation and closure plans, and mine reclamation and closure cost estimation.
 comments: false 
 noimage: true
