--- a/5w1h.html
+++ b/5w1h.html
@@ -1,6 +1,6 @@
 --- 
 layout: default 
-title: Mine Reclamation and Closure
+title: What Is Mine Reclamation and Closure?
 description: Sharing about mine reclamation and closure, mine reclamation and closure plans, and mine reclamation and closure cost estimation.
 comments: false 
 noimage: false
