delete other posts, remove top image

--- a/_posts/2024-01-28-reclamation-vs-closure.html
+++ b/_posts/2024-01-28-reclamation-vs-closure.html
@@ -2,6 +2,7 @@
 layout: default
 title: "Reclamation vs. Closure"
 comments: false
+noimage: true
 categories: reclamation
 tags: [reclamation, closure, definition]
 github: "https://github.com/pitsunda/reclamation-vs-closure"
