--- a/404.html
+++ b/404.html
@@ -6,4 +6,7 @@ permalink: 404.html
 
 <div>
   <h1>404: Page not found</h1>
+  <p>Oops! It seems you've stumbled upon a mystery as elusive as the concept of palindromes in negative bases.</p>
+  <p>Did you know? The number 404 is not just your average error code. It's also a palindrome in base negative 31! That's right, a sequence that reads the same backward as forward, but in a mathematical domain far, far away.</p>
+  <p>Curious about how that works? Check out a <a href="https://math.stackexchange.com/questions/4184566/is-404-a-palindrome-in-base-negative-31" target="_blank">deep dive</a> into the mathematics behind this curious fact. Maybe it will make this unexpected detour a bit more intriguing!</p>
 </div>
